--- a/world/rawtherapee/.artixlinux/pkgbase.yaml
+++ b/world/rawtherapee/.artixlinux/pkgbase.yaml
@@ -1,55 +1,60 @@
 ---
-pkgbase:
-  name: rawtherapee
-  version: 1:5.11-3
-  arch:
-    - x86_64
-  pkgname:
-    - rawtherapee
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 1:5.11-3
+    version: 1:5.12-1
     packages:
-      - rawtherapee-1:5.11-3-x86_64.pkg.tar.zst
+      - rawtherapee-1:5.12-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
