--- a/world/yazi/.artixlinux/pkgbase.yaml
+++ b/world/yazi/.artixlinux/pkgbase.yaml
@@ -1,12 +1,5 @@
 ---
 team: galaxy
-pkgbase:
-  name: yazi
-  version: 25.4.8-1
-  arch:
-    - x86_64
-  pkgname:
-    - yazi
 actions:
   addRepo: world
   removeRepo: null
@@ -19,38 +12,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 25.4.8-1
+    version: 25.5.31-1
     packages:
-      - yazi-25.4.8-1-x86_64.pkg.tar.zst
+      - yazi-25.5.31-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: 25.2.7-1
     packages:
       - yazi-25.2.7-1-x86_64.pkg.tar.zst
+    debug: []
