--- a/galaxy/anubis/PKGBUILD
+++ b/galaxy/anubis/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Jan Alexander Steffens (heftig) <heftig@archlinux.org>
 
 pkgname=anubis
-pkgver=1.18.0
+pkgver=1.19.1
 pkgrel=1
 pkgdesc="Reverse proxy to protect against scraper bots"
 url="https://anubis.techaro.lol/"
@@ -27,7 +27,7 @@ source=(
   "git+https://github.com/TecharoHQ/anubis?signed#tag=v${pkgver/[a-z]/-&}"
   0001-fix-web-Avoid-timestamping-main.mjs.gz.patch
 )
-b2sums=('76e28c8e240bd585a000b6884e117035282417e6771a178cf8ec08f2325bfccc2f53189d5d6c196fad0499dbf4e62375a5ffb81be9243df222e8063036b84d23'
+b2sums=('1930a3a156555257ba358bf05d2372949facb771cc70d98f6a97e0609d563969ed1458b18fb177efdb02a93f90702a085ce71987aae4c1e1ade3fdff3ed9c5bb'
         '00f0e216eb328d9305932a5a96c1542861a59b48fd95e02d1b0f7568f8c5afbdf9f6c44c89c60a83986db47028f00474fccccf2dc366b4c5f5e941804ee89103')
 validpgpkeys=(
   833F64161167B501058C394756375DA2DF02ABFF # Techaro Packages Signatures <gpg+packages@techaro.lol>
@@ -62,9 +62,10 @@ package() {
 
   install -Dm644 run/default.env -t "$pkgdir/etc/anubis"
 
-  install -Dm644 README.md data/botPolicies.json -t "$pkgdir/usr/share/doc/$pkgname"
-  cp -a docs/docs "$pkgdir/usr/share/doc/$pkgname/docs"
-  find "$pkgdir/usr/share/doc" -name _category_.json -delete
+  local docdir="$pkgdir/usr/share/doc/$pkgname"
+  install -Dm644 README.md -t "$docdir"
+  cp -a docs/docs data -t "$docdir"
+  find "$docdir" \( -name _category_.json -o -name '*.go' \) -delete
 
   install -Dm644 LICENSE -t "$pkgdir/usr/share/licenses/$pkgname"
 }
