--- a/world/inkscape/.artixlinux/srcinfo.yaml
+++ b/world/inkscape/.artixlinux/srcinfo.yaml
@@ -1,10 +1,10 @@
 ---
-version: 1.4.2-1.1
+version: 1.4.2-2
 pkgbase:
   name: inkscape
   pkgdesc: Professional vector graphics editor
   pkgver: 1.4.2
-  pkgrel: 1.1
+  pkgrel: 2
   url: https://inkscape.org/
   arch:
     - x86_64
@@ -77,6 +77,7 @@ pkgbase:
     - python-pillow
     - python-pyserial
     - python-requests
+    - python-tinycss2
     - python-urllib3
     - python-zstandard
     - readline
@@ -88,7 +89,6 @@ pkgbase:
     - 'gvfs: import clip art'
     - 'pstoedit: latex formulas'
     - 'texlive-pstricks: latex formulas'
-    - 'python-tinycss2: DXF export'
   source:
     - git+https://gitlab.com/inkscape/inkscape.git#tag=INKSCAPE_1_4_2
     - inkscape-extensions::git+https://gitlab.com/inkscape/extensions.git
@@ -113,4 +113,4 @@ pkgbase:
     - SKIP
 pkgname:
   - name: inkscape
-# generated with artixpkg 0.36.2-1-any
+# generated with artixpkg 0.36.3-1-any
