--- a/world/bluez/.artixlinux/pkgbase.yaml
+++ b/world/bluez/.artixlinux/pkgbase.yaml
@@ -1,69 +1,67 @@
 ---
-pkgbase:
-  name: bluez
-  version: 5.82-1
-  arch:
-    - x86_64
-  pkgname:
-    - bluez
-    - bluez-utils
-    - bluez-libs
-    - bluez-cups
-    - bluez-deprecated-tools
-    - bluez-hid2hci
-    - bluez-mesh
-    - bluez-obex
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 5.82-1
+    version: 5.83-1
     packages:
-      - bluez-5.82-1-x86_64.pkg.tar.zst
-      - bluez-utils-5.82-1-x86_64.pkg.tar.zst
-      - bluez-libs-5.82-1-x86_64.pkg.tar.zst
-      - bluez-cups-5.82-1-x86_64.pkg.tar.zst
-      - bluez-deprecated-tools-5.82-1-x86_64.pkg.tar.zst
-      - bluez-hid2hci-5.82-1-x86_64.pkg.tar.zst
-      - bluez-mesh-5.82-1-x86_64.pkg.tar.zst
-      - bluez-obex-5.82-1-x86_64.pkg.tar.zst
+      - bluez-5.83-1-x86_64.pkg.tar.zst
+      - bluez-utils-5.83-1-x86_64.pkg.tar.zst
+      - bluez-libs-5.83-1-x86_64.pkg.tar.zst
+      - bluez-cups-5.83-1-x86_64.pkg.tar.zst
+      - bluez-deprecated-tools-5.83-1-x86_64.pkg.tar.zst
+      - bluez-hid2hci-5.83-1-x86_64.pkg.tar.zst
+      - bluez-mesh-5.83-1-x86_64.pkg.tar.zst
+      - bluez-obex-5.83-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
