--- a/world/gnome-desktop/.artixlinux/pkgbase.yaml
+++ b/world/gnome-desktop/.artixlinux/pkgbase.yaml
@@ -1,14 +1,4 @@
 ---
-pkgbase:
-  name: gnome-desktop
-  version: 1:44.1-1
-  arch:
-    - x86_64
-  pkgname:
-    - gnome-desktop-common
-    - gnome-desktop
-    - gnome-desktop-4
-    - gnome-desktop-docs
 actions:
   addRepo: world
   removeRepo: null
@@ -21,41 +11,53 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 1:44.1-1
+    version: 1:44.3-1
     packages:
-      - gnome-desktop-common-1:44.1-1-x86_64.pkg.tar.zst
-      - gnome-desktop-1:44.1-1-x86_64.pkg.tar.zst
-      - gnome-desktop-4-1:44.1-1-x86_64.pkg.tar.zst
-      - gnome-desktop-docs-1:44.1-1-x86_64.pkg.tar.zst
+      - gnome-desktop-common-1:44.3-1-x86_64.pkg.tar.zst
+      - gnome-desktop-1:44.3-1-x86_64.pkg.tar.zst
+      - gnome-desktop-4-1:44.3-1-x86_64.pkg.tar.zst
+      - gnome-desktop-docs-1:44.3-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
