--- a/world/qt6-base/.artixlinux/pkgbase.yaml
+++ b/world/qt6-base/.artixlinux/pkgbase.yaml
@@ -1,57 +1,61 @@
 ---
-pkgbase:
-  name: qt6-base
-  version: 6.9.0-1
-  arch:
-    - x86_64
-  pkgname:
-    - qt6-base
-    - qt6-xcb-private-headers
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 6.9.0-1
+    version: 6.9.0-2
     packages:
-      - qt6-base-6.9.0-1-x86_64.pkg.tar.zst
-      - qt6-xcb-private-headers-6.9.0-1-x86_64.pkg.tar.zst
+      - qt6-base-6.9.0-2-x86_64.pkg.tar.zst
+      - qt6-xcb-private-headers-6.9.0-2-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
