--- a/world/gcc14/.artixlinux/pkgbase.yaml
+++ b/world/gcc14/.artixlinux/pkgbase.yaml
@@ -2,11 +2,11 @@
 team: world
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -30,11 +30,11 @@ repos:
     packages: []
     debug: []
   world:
-    version: 14.2.1+r753+g1cd744a6828f-3
+    version: 14.3.1+r25+g42e99e057bd7-1
     packages:
-      - gcc14-14.2.1+r753+g1cd744a6828f-3-x86_64.pkg.tar.zst
-      - gcc14-libs-14.2.1+r753+g1cd744a6828f-3-x86_64.pkg.tar.zst
-      - gcc14-fortran-14.2.1+r753+g1cd744a6828f-3-x86_64.pkg.tar.zst
+      - gcc14-14.3.1+r25+g42e99e057bd7-1-x86_64.pkg.tar.zst
+      - gcc14-libs-14.3.1+r25+g42e99e057bd7-1-x86_64.pkg.tar.zst
+      - gcc14-fortran-14.3.1+r25+g42e99e057bd7-1-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
