--- a/world/postfix/.artixlinux/pkgbase.yaml
+++ b/world/postfix/.artixlinux/pkgbase.yaml
@@ -1,71 +1,68 @@
 ---
-pkgbase:
-  name: postfix
-  version: 3.10.2-1
-  arch:
-    - x86_64
-  pkgname:
-    - postfix
-    - postfix-cdb
-    - postfix-ldap
-    - postfix-lmdb
-    - postfix-mongodb
-    - postfix-mysql
-    - postfix-pcre
-    - postfix-pgsql
-    - postfix-sqlite
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 3.10.2-1
+    version: 3.10.2-2
     packages:
-      - postfix-3.10.2-1-x86_64.pkg.tar.zst
-      - postfix-cdb-3.10.2-1-x86_64.pkg.tar.zst
-      - postfix-ldap-3.10.2-1-x86_64.pkg.tar.zst
-      - postfix-lmdb-3.10.2-1-x86_64.pkg.tar.zst
-      - postfix-mongodb-3.10.2-1-x86_64.pkg.tar.zst
-      - postfix-mysql-3.10.2-1-x86_64.pkg.tar.zst
-      - postfix-pcre-3.10.2-1-x86_64.pkg.tar.zst
-      - postfix-pgsql-3.10.2-1-x86_64.pkg.tar.zst
-      - postfix-sqlite-3.10.2-1-x86_64.pkg.tar.zst
+      - postfix-3.10.2-2-x86_64.pkg.tar.zst
+      - postfix-cdb-3.10.2-2-x86_64.pkg.tar.zst
+      - postfix-ldap-3.10.2-2-x86_64.pkg.tar.zst
+      - postfix-lmdb-3.10.2-2-x86_64.pkg.tar.zst
+      - postfix-mongodb-3.10.2-2-x86_64.pkg.tar.zst
+      - postfix-mysql-3.10.2-2-x86_64.pkg.tar.zst
+      - postfix-pcre-3.10.2-2-x86_64.pkg.tar.zst
+      - postfix-pgsql-3.10.2-2-x86_64.pkg.tar.zst
+      - postfix-sqlite-3.10.2-2-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
