--- a/galaxy/claws-mail/.artixlinux/pkgbase.yaml
+++ b/galaxy/claws-mail/.artixlinux/pkgbase.yaml
@@ -1,55 +1,60 @@
 ---
 team: galaxy
-pkgbase:
-  name: claws-mail
-  version: 4.3.1-2
-  arch:
-    - x86_64
-  pkgname:
-    - claws-mail
 actions:
-  addRepo: galaxy
-  removeRepo: null
-  triggersBuild: true
+  addRepo: null
+  removeRepo: world-goblins
+  triggersBuild: false
   triggersRebuild: false
-  triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoAdd: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: 4.3.1-2
     packages:
       - claws-mail-4.3.1-2-x86_64.pkg.tar.zst
+    debug: []
