--- a/world/notmuch/.artixlinux/pkgbase.yaml
+++ b/world/notmuch/.artixlinux/pkgbase.yaml
@@ -1,17 +1,7 @@
 ---
-pkgbase:
-  name: notmuch
-  version: 0.39-2
-  arch:
-    - x86_64
-  pkgname:
-    - notmuch
-    - notmuch-vim
-    - notmuch-mutt
-    - notmuch-runtime
 actions:
   addRepo: world
-  removeRepo: world-gremlins
+  removeRepo: world-goblins
   triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
@@ -21,41 +11,53 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 0.39-2
+    version: 0.39-2.1
     packages:
-      - notmuch-0.39-2-x86_64.pkg.tar.zst
-      - notmuch-vim-0.39-2-x86_64.pkg.tar.zst
-      - notmuch-mutt-0.39-2-x86_64.pkg.tar.zst
-      - notmuch-runtime-0.39-2-x86_64.pkg.tar.zst
+      - notmuch-0.39-2.1-x86_64.pkg.tar.zst
+      - notmuch-vim-0.39-2.1-x86_64.pkg.tar.zst
+      - notmuch-mutt-0.39-2.1-x86_64.pkg.tar.zst
+      - notmuch-runtime-0.39-2.1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
