--- a/world/pyside6/.artixlinux/pkgbase.yaml
+++ b/world/pyside6/.artixlinux/pkgbase.yaml
@@ -1,13 +1,4 @@
 ---
-pkgbase:
-  name: pyside6
-  version: 6.9.0-2
-  arch:
-    - x86_64
-  pkgname:
-    - pyside6
-    - pyside6-tools
-    - shiboken6
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -20,40 +11,55 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
-    version: null
-    packages: []
+    version: 6.9.1-2
+    packages:
+      - pyside6-6.9.1-2-x86_64.pkg.tar.zst
+      - pyside6-tools-6.9.1-2-x86_64.pkg.tar.zst
+      - shiboken6-6.9.1-2-x86_64.pkg.tar.zst
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 6.9.0-2
+    version: 6.9.1-1
     packages:
-      - pyside6-6.9.0-2-x86_64.pkg.tar.zst
-      - pyside6-tools-6.9.0-2-x86_64.pkg.tar.zst
-      - shiboken6-6.9.0-2-x86_64.pkg.tar.zst
+      - pyside6-6.9.1-1-x86_64.pkg.tar.zst
+      - pyside6-tools-6.9.1-1-x86_64.pkg.tar.zst
+      - shiboken6-6.9.1-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
