--- a/world/qt6-doc/.artixlinux/pkgbase.yaml
+++ b/world/qt6-doc/.artixlinux/pkgbase.yaml
@@ -1,12 +1,4 @@
 ---
-pkgbase:
-  name: qt6-doc
-  version: 6.9.0-1
-  arch:
-    - any
-  pkgname:
-    - qt6-doc
-    - qt6-examples
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -19,39 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 6.9.0-1
+    version: 6.9.1-1
     packages:
-      - qt6-doc-6.9.0-1-any.pkg.tar.zst
-      - qt6-examples-6.9.0-1-any.pkg.tar.zst
+      - qt6-doc-6.9.1-1-any.pkg.tar.zst
+      - qt6-examples-6.9.1-1-any.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
