--- a/world/qt6-multimedia/.artixlinux/pkgbase.yaml
+++ b/world/qt6-multimedia/.artixlinux/pkgbase.yaml
@@ -1,13 +1,4 @@
 ---
-pkgbase:
-  name: qt6-multimedia
-  version: 6.9.0-1
-  arch:
-    - x86_64
-  pkgname:
-    - qt6-multimedia
-    - qt6-multimedia-ffmpeg
-    - qt6-multimedia-gstreamer
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -20,40 +11,52 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 6.9.0-1
+    version: 6.9.1-1
     packages:
-      - qt6-multimedia-6.9.0-1-x86_64.pkg.tar.zst
-      - qt6-multimedia-ffmpeg-6.9.0-1-x86_64.pkg.tar.zst
-      - qt6-multimedia-gstreamer-6.9.0-1-x86_64.pkg.tar.zst
+      - qt6-multimedia-6.9.1-1-x86_64.pkg.tar.zst
+      - qt6-multimedia-ffmpeg-6.9.1-1-x86_64.pkg.tar.zst
+      - qt6-multimedia-gstreamer-6.9.1-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
