--- a/world/qtcreator/.artixlinux/pkgbase.yaml
+++ b/world/qtcreator/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -21,18 +21,20 @@ repos:
     packages: []
     debug: []
   world-goblins:
-    version: null
-    packages: []
+    version: 16.0.2-4
+    packages:
+      - qtcreator-16.0.2-4-x86_64.pkg.tar.zst
+      - qtcreator-devel-16.0.2-4-x86_64.pkg.tar.zst
     debug: []
   world-gremlins:
     version: null
     packages: []
     debug: []
   world:
-    version: 16.0.2-1
+    version: 16.0.2-3
     packages:
-      - qtcreator-16.0.2-1-x86_64.pkg.tar.zst
-      - qtcreator-devel-16.0.2-1-x86_64.pkg.tar.zst
+      - qtcreator-16.0.2-3-x86_64.pkg.tar.zst
+      - qtcreator-devel-16.0.2-3-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
