--- a/galaxy/libqtxdg/.artixlinux/pkgbase.yaml
+++ b/galaxy/libqtxdg/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: libqtxdg
-  version: 4.2.0-2
-  arch:
-    - x86_64
-  pkgname:
-    - libqtxdg
 actions:
   addRepo: galaxy
   removeRepo: galaxy-gremlins
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 4.2.0-2
+    version: 4.2.0-3
     packages:
-      - libqtxdg-4.2.0-2-x86_64.pkg.tar.zst
+      - libqtxdg-4.2.0-3-x86_64.pkg.tar.zst
+    debug: []
 team: galaxy
