--- a/galaxy/moksha-theme-arc-green/.artixlinux/pkgbase.yaml
+++ b/galaxy/moksha-theme-arc-green/.artixlinux/pkgbase.yaml
@@ -1,12 +1,5 @@
 ---
 team: galaxy
-pkgbase:
-  name: moksha-theme-arc-green
-  version: 0.5.0-15
-  arch:
-    - any
-  pkgname:
-    - moksha-theme-arc-green
 actions:
   addRepo: galaxy
   removeRepo: galaxy-gremlins
@@ -19,37 +12,49 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 0.5.0-15
+    version: 0.5.0-16
     packages:
-      - moksha-theme-arc-green-0.5.0-15-any.pkg.tar.zst
+      - moksha-theme-arc-green-0.5.0-16-any.pkg.tar.zst
+    debug: []
